# Vector_cpp

./: CMakeLists.txt  README.md  Vector.h  complex.h  functions.h  helpers.h  main.cpp  main.py  makefile  matrix.h  vector.h  vectorgebra.h
Neongebra/: inspect.txt  makefile
Neongebra/include/: complex.h  exceptions.h  graph.h  matrix.h  neonvector.h  neonvector_int8.h  node.h  vector.h  vectorgebra.h
Neongebra/neon_include/: neonvector_int16.h  neonvector_int8.h  neonvector_uint8.h
Neongebra/neon_src/: neonvector_int16.cpp  neonvector_int8.cpp  neonvector_uint8.cpp
Neongebra/src/: functions.cpp  helpers.cpp  main.cpp  matrix.cpp  neonvector.cpp  neonvector_int8.cpp  node.cpp  vector.cpp
include/: complex.h  exceptions.h  functions.h  graph.h  helpers.h  matrix.h  node.h  vector.h  vectorgebra.h
optimizations/: README.md  main.cpp  makefile  run
optimizations/executables/: run
optimizations/executables/include/: complex.h  exceptions.h  functions.h  vectorgebra.h
src/: complex.cpp  exceptions.cpp  graph.cpp  helpers.cpp  matrix.cpp  vector.cpp  vectorgebra.cpp
